--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,12 +8,12 @@
 
 
     <Button
-        android:id="@+id/buyTicketsButton"
+        android:id="@+id/buy_tickets_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/buy_tickets"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/myOrdersButton"
+        app:layout_constraintBottom_toTopOf="@+id/my_orders_button"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -21,17 +21,17 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
-        android:id="@+id/myOrdersButton"
+        android:id="@+id/my_orders_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/my_orders"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buyTicketsButton"
+        app:layout_constraintEnd_toEndOf="@+id/buy_tickets_button"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/buyTicketsButton"
-        app:layout_constraintTop_toBottomOf="@+id/buyTicketsButton" />
+        app:layout_constraintStart_toStartOf="@+id/buy_tickets_button"
+        app:layout_constraintTop_toBottomOf="@+id/buy_tickets_button" />
 
     <ImageView
         android:id="@+id/imageView"
