--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -80,6 +80,29 @@
             app:layout_constraintTop_toBottomOf="@+id/game_heading"
             tools:text="COWBOYS @ CHARGERS" />
 
+        <ImageView
+            android:id="@+id/bye_logo"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/game_heading"
+            app:srcCompat="@drawable/los_angeles_chargers_logo" />
+
+        <TextView
+            android:id="@+id/txt_bye"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bye"
+            android:textColor="@color/yellow"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@+id/bye_logo"
+            app:layout_constraintStart_toStartOf="@+id/bye_logo"
+            app:layout_constraintTop_toBottomOf="@+id/bye_logo" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
