--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,6 +39,9 @@
             app:destination="@id/scheduleFragment"
             app:popUpTo="@id/scheduleFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="gameId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/orderFragment"
